--- a/index.html
+++ b/index.html
@@ -1,83 +1,80 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Biographie - Mutajiri Ngoie Dimercia</title>
+<meta charset="UTF-8">
+<title>Biographie - Mutajiri Ngoie Dimercia</title>
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #fff0f6;
-      margin: 0;
-      padding: 0;
-    }
+<style>
+body{
+  margin:0;
+  font-family: Arial, sans-serif;
+  background:#fff1f7;
+}
 
-    header {
-      background: #d63384;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
+header{
+  background:#d63384;
+  color:white;
+  text-align:center;
+  padding:25px;
+}
 
-    section {
-      padding: 30px;
-      max-width: 1000px;
-      margin: auto;
-    }
+section{
+  max-width:1000px;
+  margin:auto;
+  padding:30px;
+}
 
-    h2 {
-      color: #d63384;
-      text-align: center;
-      margin-bottom: 20px;
-    }
+h2{
+  text-align:center;
+  color:#d63384;
+  margin-bottom:20px;
+}
 
-    .photo {
-      width: 260px;
-      border-radius: 20px;
-      border: 4px solid #d63384;
-      display: block;
-      margin: 20px auto;
-      box-shadow: 0 8px 20px rgba(214, 51, 132, 0.3);
-    }
+.photo{
+  display:block;
+  margin:20px auto;
+  width:260px;
+  border-radius:18px;
+  border:4px solid #d63384;
+  box-shadow:0 8px 20px rgba(214,51,132,0.4);
+}
 
-    .biographie {
-      background: white;
-      padding: 25px;
-      border-radius: 15px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      line-height: 1.8;
-      text-align: justify;
-    }
+.card{
+  background:white;
+  padding:25px;
+  border-radius:15px;
+  box-shadow:0 5px 15px rgba(0,0,0,0.15);
+  line-height:1.8;
+  text-align:justify;
+}
 
-    table {
-      border-collapse: collapse;
-      margin: 30px auto;
-    }
+/* TABLEAU 16x16 */
+table{
+  border-collapse:collapse;
+  margin:30px auto;
+}
 
-    table td {
-      border: 1px solid #d63384;
-      padding: 10px;
-      width: 40px;
-      height: 40px;
-      text-align: center;
-    }
+td{
+  width:35px;
+  height:35px;
+  border:1px solid #d63384;
+}
 
-    .table-rose {
-      background: #ffe6f0;
-      border-radius: 15px;
-      padding: 20px;
-      margin-top: 40px;
-      box-shadow: 0 5px 15px rgba(214, 51, 132, 0.3);
-    }
+/* CONCLUSION */
+.conclusion{
+  background:#ffe0ef;
+  padding:25px;
+  border-radius:15px;
+  box-shadow:0 6px 15px rgba(214,51,132,0.4);
+}
 
-    footer {
-      background: #d63384;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 40px;
-    }
-  </style>
+footer{
+  background:#d63384;
+  color:white;
+  text-align:center;
+  padding:15px;
+}
+</style>
 </head>
 
 <body>
@@ -87,92 +84,95 @@
   <p>Biographie personnelle</p>
 </header>
 
+<!-- ENFANCE -->
 <section>
-  <h2>Photo d’enfance</h2>
-  <img src="IMG-20260119-WA3174.jpg" alt="Photo enfant" class="photo">
+<h2>Photo d’enfance</h2>
+<img src="IMG-20260119-WA3174.jpg" class="photo">
+
+<div class="card">
+<p>
+À l’époque de mes 3 ans, inconsciente et ignorante que j’étais,
+je me suis rendue auprès de mes ascendants : grand frère,
+grande sœur ainsi que mes parents, afin d’obtenir des renseignements
+sur mes premiers pas.
+</p>
+
+<p>
+Ils m’ont raconté qu’à seulement 3 ans, j’étais déjà très curieuse,
+turbulente et attentive à tout ce qui m’entourait.
+C’est à ce moment que mes premiers pas dans l’apprentissage ont commencé.
+</p>
+
+<p>
+J’aimais observer, comprendre et découvrir le monde autour de moi,
+ce qui a posé les bases solides de la passion que je développe encore aujourd’hui.
+</p>
+</div>
 </section>
 
+<!-- ADULTE -->
 <section>
-  <h2>Photo à l’âge adulte</h2>
-  <!-- Quand tu uploades la photo adulte, remplace adulte.jpg par son vrai nom -->
-  <img src="adulte.jpg" alt="Photo adulte" class="photo">
+<h2>Photo à l’âge adulte</h2>
+
+<!-- ⚠️ REMPLACE LE NOM SI TA PHOTO A UN AUTRE NOM -->
+<img src="IMG-20260119-WA4000.jpg" class="photo">
+
+<div class="card">
+<p>
+Aujourd’hui, je suis une personne aimable, passionnée et curieuse,
+qui aime apprendre et apprécie profondément les personnes qui l’entourent.
+</p>
+
+<p>
+Pour ce nouveau chemin que j’ai choisi, j’espère être à la hauteur
+des exigences et acquérir de nombreuses connaissances
+à l’Université de Lubumbashi.
+</p>
+
+<p>
+Étudiante en classe préparatoire à l’UNILU,
+je nourris l’ambition de devenir une ingénieure exemplaire
+dans le domaine que j’ai choisi, guidée par le sérieux,
+la discipline et l’amour du travail bien fait.
+</p>
+</div>
 </section>
 
+<!-- TABLEAU -->
 <section>
-  <h2>Biographie</h2>
-  <div class="biographie">
-    <p>
-      Aujourd’hui, je suis une personne aimable, passionnée et curieuse, qui aime apprendre
-      et apprécie profondément les personnes qui l’entourent.
-    </p>
-
-    <p>
-      Pour ce nouveau chemin que j’ai choisi, j’espère être à la hauteur des exigences
-      et acquérir de nombreuses connaissances à l’Université de Lubumbashi.
-    </p>
-
-    <p>
-      Étudiante en classe préparatoire à l’UNILU, je nourris l’ambition de devenir
-      une ingénieure exemplaire dans le domaine que j’ai choisi,
-      guidée par le sérieux, la discipline et l’amour du travail bien fait.
-    </p>
-  </div>
+<h2>Tableau 16 × 16</h2>
+<table>
+<!-- 16 lignes, 16 colonnes -->
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+</table>
 </section>
 
-<section>
-  <h2>Tableau 16 × 16</h2>
-  <table>
-    <!-- 16 lignes -->
-    <!-- Chaque ligne contient 16 colonnes -->
-    <!-- Ligne 1 -->
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <!-- Répété 16 fois -->
-    <!-- Tu peux remplir plus tard si besoin -->
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-  </table>
-</section>
-
-<section class="table-rose">
-  <h2>Conclusion</h2>
-  <p>
-    Cette page représente mon parcours, mes ambitions et ma vision de l’avenir.
-    Elle symbolise une évolution constante, de l’enfance à l’âge adulte,
-    guidée par le savoir, la détermination et la foi en mes capacités.
-  </p>
+<section class="conclusion">
+<h2>Conclusion</h2>
+<p>
+Cette page représente mon parcours, mon évolution et mes ambitions.
+De l’enfance à l’âge adulte, chaque étape m’a construite
+et continue de nourrir mes objectifs futurs.
+</p>
 </section>
 
 <footer>
-  © 2026 – Mutajiri Ngoie Dimercia | Tous droits réservés
+© 2026 – Mutajiri Ngoie Dimercia
 </footer>
 
 </body>
