--- a/index.html
+++ b/index.html
@@ -1,178 +1,212 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Biographie - Mutajiri Ngoie Dimercia</title>
+    <meta charset="UTF-8">
+    <title>Mutajiri Ngoie Dimercia - Biographie</title>
 
-<style>
-body{
-  margin:0;
-  font-family: Arial, sans-serif;
-  background:#fff1f7;
-}
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #fdecef;
+            color: #333;
+        }
 
-header{
-  background:#d63384;
-  color:white;
-  text-align:center;
-  padding:25px;
-}
+        header {
+            background-color: #d63384;
+            color: white;
+            text-align: center;
+            padding: 25px;
+        }
 
-section{
-  max-width:1000px;
-  margin:auto;
-  padding:30px;
-}
+        section {
+            max-width: 900px;
+            margin: 30px auto;
+            padding: 20px;
+        }
 
-h2{
-  text-align:center;
-  color:#d63384;
-  margin-bottom:20px;
-}
+        h2 {
+            text-align: center;
+            color: #d63384;
+            margin-bottom: 15px;
+        }
 
-.photo{
-  display:block;
-  margin:20px auto;
-  width:260px;
-  border-radius:18px;
-  border:4px solid #d63384;
-  box-shadow:0 8px 20px rgba(214,51,132,0.4);
-}
+        .photo-box {
+            text-align: center;
+            margin-bottom: 25px;
+        }
 
-.card{
-  background:white;
-  padding:25px;
-  border-radius:15px;
-  box-shadow:0 5px 15px rgba(0,0,0,0.15);
-  line-height:1.8;
-  text-align:justify;
-}
+        .photo-box img {
+            width: 260px;
+            border-radius: 15px;
+            border: 4px solid #d63384;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
 
-/* TABLEAU 16x16 */
-table{
-  border-collapse:collapse;
-  margin:30px auto;
-}
+        .texte {
+            background-color: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            margin-bottom: 30px;
+            line-height: 1.6;
+        }
 
-td{
-  width:35px;
-  height:35px;
-  border:1px solid #d63384;
-}
+        /* TABLEAU 16 x 16 */
+        table {
+            border-collapse: collapse;
+            margin: auto;
+            background-color: #fff0f5;
+        }
 
-/* CONCLUSION */
-.conclusion{
-  background:#ffe0ef;
-  padding:25px;
-  border-radius:15px;
-  box-shadow:0 6px 15px rgba(214,51,132,0.4);
-}
+        td {
+            width: 30px;
+            height: 30px;
+            border: 1px solid #d63384;
+        }
 
-footer{
-  background:#d63384;
-  color:white;
-  text-align:center;
-  padding:15px;
-}
-</style>
+        footer {
+            background-color: #f8c8dc;
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+            border-top: 3px solid #d63384;
+        }
+    </style>
 </head>
 
 <body>
 
 <header>
-  <h1>Mutajiri Ngoie Dimercia</h1>
-  <p>Biographie personnelle</p>
+    <h1>Mutajiri Ngoie Dimercia</h1>
+    <p>Biographie personnelle</p>
 </header>
 
-<!-- ENFANCE -->
 <section>
-<h2>Photo d’enfance</h2>
-<img src="IMG-20260119-WA3174.jpg" class="photo">
 
-<div class="card">
-<p>
-À l’époque de mes 3 ans, inconsciente et ignorante que j’étais,
-je me suis rendue auprès de mes ascendants : grand frère,
-grande sœur ainsi que mes parents, afin d’obtenir des renseignements
-sur mes premiers pas.
-</p>
+    <!-- PHOTO ENFANCE -->
+    <h2>Photo d’enfance</h2>
+    <div class="photo-box">
+        <img src="IMG-20260119-WA3174.jpg" alt="Photo d'enfance">
+    </div>
 
-<p>
-Ils m’ont raconté qu’à seulement 3 ans, j’étais déjà très curieuse,
-turbulente et attentive à tout ce qui m’entourait.
-C’est à ce moment que mes premiers pas dans l’apprentissage ont commencé.
-</p>
+    <div class="texte">
+        <strong>Paroles quand elle était petite :</strong><br><br>
+        Depuis mon enfance, j’étais une fille souriante, pleine de rêves et
+        d’innocence. J’aimais apprendre, observer et poser beaucoup de questions.
+        Mon entourage voyait déjà en moi une personne déterminée, curieuse
+        et respectueuse, toujours prête à avancer malgré les difficultés.
+    </div>
 
-<p>
-J’aimais observer, comprendre et découvrir le monde autour de moi,
-ce qui a posé les bases solides de la passion que je développe encore aujourd’hui.
-</p>
-</div>
-</section>
+    <!-- PHOTO ADULTE -->
+    <h2>Photo à l’âge adulte</h2>
+    <div class="photo-box">
+        <img src="IMG-20260120-WA0121.jpg" alt="Photo à l'âge adulte">
+    </div>
 
-<!-- ADULTE -->
-<section>
-<h2>Photo à l’âge adulte</h2>
+    <div class="texte">
+        <strong>Paroles à l’âge adulte :</strong><br><br>
+        Aujourd’hui, je suis devenue une femme responsable, passionnée et ambitieuse.
+        Mon parcours m’a appris la persévérance, la discipline et la confiance en moi.
+        Étudiante en classe préparatoire à l’Université de Lubumbashi, je poursuis
+        mon objectif de devenir une ingénieure exemplaire, guidée par le sérieux,
+        le travail et l’amour du savoir.
+    </div>
 
-<!-- ⚠️ REMPLACE LE NOM SI TA PHOTO A UN AUTRE NOM -->
-<img src="IMG-20260119-WA4000.jpg" class="photo">
+    <!-- TABLEAU -->
+    <h2>Tableau d’activités</h2>
 
-<div class="card">
-<p>
-Aujourd’hui, je suis une personne aimable, passionnée et curieuse,
-qui aime apprendre et apprécie profondément les personnes qui l’entourent.
-</p>
+    <table>
+        <!-- 16 lignes -->
+        <!-- Chaque ligne contient 16 colonnes -->
+        <!-- Ligne 1 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 2 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 3 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 4 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 5 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 6 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 7 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 8 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 9 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 10 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 11 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 12 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 13 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 14 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 15 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+        <!-- Ligne 16 -->
+        <tr>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        </tr>
+    </table>
 
-<p>
-Pour ce nouveau chemin que j’ai choisi, j’espère être à la hauteur
-des exigences et acquérir de nombreuses connaissances
-à l’Université de Lubumbashi.
-</p>
-
-<p>
-Étudiante en classe préparatoire à l’UNILU,
-je nourris l’ambition de devenir une ingénieure exemplaire
-dans le domaine que j’ai choisi, guidée par le sérieux,
-la discipline et l’amour du travail bien fait.
-</p>
-</div>
-</section>
-
-<!-- TABLEAU -->
-<section>
-<h2>Tableau 16 × 16</h2>
-<table>
-<!-- 16 lignes, 16 colonnes -->
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-</table>
-</section>
-
-<section class="conclusion">
-<h2>Conclusion</h2>
-<p>
-Cette page représente mon parcours, mon évolution et mes ambitions.
-De l’enfance à l’âge adulte, chaque étape m’a construite
-et continue de nourrir mes objectifs futurs.
-</p>
 </section>
 
 <footer>
-© 2026 – Mutajiri Ngoie Dimercia
+    <strong>Conclusion</strong><br>
+    Cette page représente mon parcours, mon évolution et mes ambitions,
+    de l’enfance à l’âge adulte.
 </footer>
 
 </body>
