--- a/index.html
+++ b/index.html
@@ -1,213 +1,82 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Mutajiri Ngoie Dimercia - Biographie</title>
+<!-- ENFANCE -->
+<h2>Quand j’étais petit</h2>
 
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #fdecef;
-            color: #333;
-        }
+<div class="photo-box">
+    <img src="IMG-20260119-WA3174.jpg" alt="Photo d'enfance">
+</div>
 
-        header {
-            background-color: #d63384;
-            color: white;
-            text-align: center;
-            padding: 25px;
-        }
+<div class="texte">
+    Depuis mon enfance, j’étais une fille souriante, pleine de rêves et
+    d’innocence. J’aimais apprendre, observer et poser beaucoup de questions.
+    Mon entourage voyait déjà en moi une personne déterminée, curieuse et
+    respectueuse, toujours prête à avancer malgré les difficultés.
+</div>
 
-        section {
-            max-width: 900px;
-            margin: 30px auto;
-            padding: 20px;
-        }
+<!-- ADULTE -->
+<h2>Maintenant moi</h2>
 
-        h2 {
-            text-align: center;
-            color: #d63384;
-            margin-bottom: 15px;
-        }
+<div class="photo-box">
+    <img src="IMG-20260120-WA0121.jpg" alt="Photo adulte">
+</div>
 
-        .photo-box {
-            text-align: center;
-            margin-bottom: 25px;
-        }
+<div class="texte">
+    Aujourd’hui, je suis devenue une femme responsable, passionnée et ambitieuse.
+    Mon parcours m’a appris la persévérance, la discipline et la confiance en moi.
+    Étudiante en classe préparatoire à l’Université de Lubumbashi, je poursuis
+    mon objectif de devenir une ingénieure exemplaire.
+</div>
 
-        .photo-box img {
-            width: 260px;
-            border-radius: 15px;
-            border: 4px solid #d63384;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-        }
+<!-- TABLEAU -->
+<h2>Tableau d’activités</h2>
 
-        .texte {
-            background-color: white;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            margin-bottom: 30px;
-            line-height: 1.6;
-        }
+<table>
+    <!-- Ligne des colonnes -->
+    <tr>
+        <td></td>
+        <td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td>
+        <td>9</td><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td>
+    </tr>
 
-        /* TABLEAU 16 x 16 */
-        table {
-            border-collapse: collapse;
-            margin: auto;
-            background-color: #fff0f5;
-        }
+    <!-- Lignes 1 à 7 -->
+    <tr>
+        <td>1</td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
 
-        td {
-            width: 30px;
-            height: 30px;
-            border: 1px solid #d63384;
-        }
+    <tr>
+        <td>2</td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
 
-        footer {
-            background-color: #f8c8dc;
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-            border-top: 3px solid #d63384;
-        }
-    </style>
-</head>
+    <tr>
+        <td>3</td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
 
-<body>
+    <tr>
+        <td>4</td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
 
-<header>
-    <h1>Mutajiri Ngoie Dimercia</h1>
-    <p>Biographie personnelle</p>
-</header>
+    <tr>
+        <td>5</td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
 
-<section>
+    <tr>
+        <td>6</td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
 
-    <!-- PHOTO ENFANCE -->
-    <h2>Photo d’enfance</h2>
-    <div class="photo-box">
-        <img src="IMG-20260119-WA3174.jpg" alt="Photo d'enfance">
-    </div>
-
-    <div class="texte">
-        <strong>Paroles quand elle était petite :</strong><br><br>
-        Depuis mon enfance, j’étais une fille souriante, pleine de rêves et
-        d’innocence. J’aimais apprendre, observer et poser beaucoup de questions.
-        Mon entourage voyait déjà en moi une personne déterminée, curieuse
-        et respectueuse, toujours prête à avancer malgré les difficultés.
-    </div>
-
-    <!-- PHOTO ADULTE -->
-    <h2>Photo à l’âge adulte</h2>
-    <div class="photo-box">
-        <img src="IMG-20260120-WA0121.jpg" alt="Photo à l'âge adulte">
-    </div>
-
-    <div class="texte">
-        <strong>Paroles à l’âge adulte :</strong><br><br>
-        Aujourd’hui, je suis devenue une femme responsable, passionnée et ambitieuse.
-        Mon parcours m’a appris la persévérance, la discipline et la confiance en moi.
-        Étudiante en classe préparatoire à l’Université de Lubumbashi, je poursuis
-        mon objectif de devenir une ingénieure exemplaire, guidée par le sérieux,
-        le travail et l’amour du savoir.
-    </div>
-
-    <!-- TABLEAU -->
-    <h2>Tableau d’activités</h2>
-
-    <table>
-        <!-- 16 lignes -->
-        <!-- Chaque ligne contient 16 colonnes -->
-        <!-- Ligne 1 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 2 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 3 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 4 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 5 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 6 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 7 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 8 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 9 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 10 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 11 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 12 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 13 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 14 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 15 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-        <!-- Ligne 16 -->
-        <tr>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-            <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        </tr>
-    </table>
-
-</section>
-
-<footer>
-    <strong>Conclusion</strong><br>
-    Cette page représente mon parcours, mon évolution et mes ambitions,
-    de l’enfance à l’âge adulte.
-</footer>
-
-</body>
-</html>
+    <tr>
+        <td>7</td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+</table>
