--- a/index.html
+++ b/index.html
@@ -1,82 +1,135 @@
-<!-- ENFANCE -->
-<h2>Quand j’étais petit</h2>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<div class="photo-box">
-    <img src="IMG-20260119-WA3174.jpg" alt="Photo d'enfance">
+<title>Mutajiri Ngoie Dimercia</title>
+
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #fde6ee;
+    color: #333;
+}
+
+header {
+    background-color: #d63384;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+
+section {
+    max-width: 800px;
+    margin: 30px auto;
+    text-align: center;
+}
+
+h2 {
+    color: #d63384;
+    margin-bottom: 15px;
+}
+
+.photo-box img {
+    width: 260px;
+    border-radius: 15px;
+    border: 4px solid #d63384;
+    margin-bottom: 15px;
+}
+
+.texte {
+    background-color: white;
+    padding: 18px;
+    border-radius: 12px;
+    margin: 15px;
+    line-height: 1.6;
+}
+
+table {
+    margin: 20px auto;
+    border-collapse: collapse;
+}
+
+td {
+    border: 1px solid #d63384;
+    width: 35px;
+    height: 30px;
+    font-size: 12px;
+    text-align: center;
+}
+
+.conclusion {
+    background-color: #d63384;
+    color: white;
+    padding: 20px;
+    margin-top: 40px;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+    <h1>Mutajiri Ngoie Dimercia</h1>
+    <p>Biographie personnelle</p>
+</header>
+
+<section>
+    <h2>Quand j’étais petit</h2>
+
+    <div class="photo-box">
+        <img src="IMG-20260119-WA3174.jpg" alt="Photo enfance">
+    </div>
+
+    <div class="texte">
+        Depuis mon enfance, j’étais une fille souriante, pleine de rêves et
+        d’innocence. J’aimais apprendre, observer et poser beaucoup de questions.
+        Mon entourage voyait déjà en moi une personne déterminée, curieuse et
+        respectueuse, toujours prête à avancer malgré les difficultés.
+    </div>
+</section>
+
+<section>
+    <h2>Maintenant moi</h2>
+
+    <div class="photo-box">
+        <img src="IMG-20260120-WA0121.jpg" alt="Photo adulte">
+    </div>
+
+    <div class="texte">
+        Aujourd’hui, je suis devenue une femme responsable, passionnée et ambitieuse.
+        Mon parcours m’a appris la persévérance, la discipline et la confiance en moi.
+        Étudiante en classe préparatoire à l’Université de Lubumbashi, je poursuis
+        mon objectif de devenir une ingénieure exemplaire.
+    </div>
+</section>
+
+<section>
+    <h2>Tableau d’activités</h2>
+
+    <table>
+        <tr>
+            <td></td>
+            <td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td>
+            <td>9</td><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td>
+        </tr>
+
+        <tr><td>1</td><td colspan="16"></td></tr>
+        <tr><td>2</td><td colspan="16"></td></tr>
+        <tr><td>3</td><td colspan="16"></td></tr>
+        <tr><td>4</td><td colspan="16"></td></tr>
+        <tr><td>5</td><td colspan="16"></td></tr>
+        <tr><td>6</td><td colspan="16"></td></tr>
+        <tr><td>7</td><td colspan="16"></td></tr>
+    </table>
+</section>
+
+<div class="conclusion">
+    Cette page représente mon parcours, mon évolution et mes ambitions,
+    de l’enfance à l’âge adulte.
 </div>
 
-<div class="texte">
-    Depuis mon enfance, j’étais une fille souriante, pleine de rêves et
-    d’innocence. J’aimais apprendre, observer et poser beaucoup de questions.
-    Mon entourage voyait déjà en moi une personne déterminée, curieuse et
-    respectueuse, toujours prête à avancer malgré les difficultés.
-</div>
-
-<!-- ADULTE -->
-<h2>Maintenant moi</h2>
-
-<div class="photo-box">
-    <img src="IMG-20260120-WA0121.jpg" alt="Photo adulte">
-</div>
-
-<div class="texte">
-    Aujourd’hui, je suis devenue une femme responsable, passionnée et ambitieuse.
-    Mon parcours m’a appris la persévérance, la discipline et la confiance en moi.
-    Étudiante en classe préparatoire à l’Université de Lubumbashi, je poursuis
-    mon objectif de devenir une ingénieure exemplaire.
-</div>
-
-<!-- TABLEAU -->
-<h2>Tableau d’activités</h2>
-
-<table>
-    <!-- Ligne des colonnes -->
-    <tr>
-        <td></td>
-        <td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td>
-        <td>9</td><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td>
-    </tr>
-
-    <!-- Lignes 1 à 7 -->
-    <tr>
-        <td>1</td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-
-    <tr>
-        <td>2</td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-
-    <tr>
-        <td>3</td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-
-    <tr>
-        <td>4</td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-
-    <tr>
-        <td>5</td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-
-    <tr>
-        <td>6</td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-
-    <tr>
-        <td>7</td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-        <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-</table>
+</body>
+</html>
