--- a/index.html
+++ b/index.html
@@ -67,6 +67,46 @@ td {
     margin-top: 40px;
 }
 </style>
+    body {
+  background-color: #fde6ee;
+  font-family: Arial, sans-serif;
+}
+
+/* TITRES */
+.section-title {
+  text-align: center;
+  color: #d63384;
+  margin-top: 30px;
+}
+
+/* PHOTO */
+.photo-box {
+  display: flex;
+  justify-content: center;
+  margin: 15px 0;
+}
+
+.photo-box img {
+  width: 220px;
+  border-radius: 15px;
+  border: 3px solid #d63384;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
+/* TEXTE */
+.texte-box {
+  max-width: 600px;
+  margin: auto;
+  background: white;
+  padding: 15px;
+  border-radius: 15px;
+  border-left: 5px solid #d63384;
+}
+
+.texte-box h3 {
+  color: #d63384;
+  margin-bottom: 8px;
+}
 </head>
 
 <body>
